--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/soltius/BluetoothClassicSerial.git"
+    "url": "git+https://github.com/MaximBelov/BluetoothClassicSerial.git"
   },
   "keywords": [
     "cordova",
@@ -23,7 +23,17 @@
   "author": "Soltius New Zealand <steve.campbell@soltius.co.nz>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/soltius/BluetoothClassicSerial/issues"
+    "url": "https://github.com/MaximBelov/BluetoothClassicSerial/issues"
   },
-  "homepage": "https://github.com/soltius/BluetoothClassicSerial#readme"
+  "homepage": "https://github.com/MaximBelov/BluetoothClassicSerial#readme",
+  "contributors": [
+    {
+      "name": "Maxim Belov",
+      "email": "belov1988@gmail.com"
+    },
+    {
+      "name": "Kogulan Naskaran",
+      "email": "kogulan.baskaran@gmail.com"
+    }
+  ]
 }
